[MPS] Migrate atan2 to MPS kernel
Vibe-code with metal-skill


ghstack-source-id: f1ad597dfb56a43872eb160312c538f93e0c6f50
Pull-Request: https://github.com/pytorch/pytorch/pull/173405

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -9973,8 +9973,7 @@
   structured: True
   structured_inherits: TensorIteratorBase
   dispatch:
-    CPU, CUDA: atan2_out
-    MPS: atan2_out_mps
+    CPU, CUDA, MPS: atan2_out
   tags: [core, pointwise]
 
 - func: atan2_(Tensor(a!) self, Tensor other) -> Tensor(a!)
