[MPS] Vibe-code torch.gcd
Using Metal kernel writing skill


ghstack-source-id: f58a9bb1f62d34785d7cf2f312d54b63fb4bd8ed
Pull-Request: https://github.com/pytorch/pytorch/pull/173406

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -2877,7 +2877,7 @@
   structured: True
   structured_inherits: TensorIteratorBase
   dispatch:
-    CPU, CUDA: gcd_out
+    CPU, CUDA, MPS: gcd_out
   tags: pointwise
 
 - func: gcd(Tensor self, Tensor other) -> Tensor
