Disable ROCM jobs on trunk
They way they were added by https://github.com/pytorch/pytorch/pull/165674 makes signal from this jobs only visible on PR, but skipped when actually pushed to trunk, see https://hud.pytorch.org/hud/pytorch/pytorch/main/1?per_page=50&name_filter=trunk%20%2F%20linux-jammy-rocm which avoids usual latency monitoring, but creates a very confusing pattern, when `broken on trunk` status is never applied to those jobs

This deficiency was highlighted in late Nov 2025, but still not fix as of late Jan 2026 as of almost


ghstack-source-id: 537d31b5a9223da2cb3755c7a2426dd1deb3c8a7
Pull-Request: https://github.com/pytorch/pytorch/pull/173573

--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -295,7 +295,10 @@ jobs:
     secrets: inherit
 
   linux-jammy-rocm-py3_10-build:
-    if: ${{ startsWith(github.event.ref, 'refs/tags/ciflow/trunk') || (needs.job-filter.outputs.jobs != '' && contains(needs.job-filter.outputs.jobs, ' linux-jammy-rocm-py3.10 ')) }}
+    #NS: Trunk jobs should run on both PR if ciflow/trunk is added an on trunk
+    # But https://github.com/pytorch/pytorch/pull/165674 always skips them on trunk
+    if: 0
+    # if: ${{ startsWith(github.event.ref, 'refs/tags/ciflow/trunk') || (needs.job-filter.outputs.jobs != '' && contains(needs.job-filter.outputs.jobs, ' linux-jammy-rocm-py3.10 ')) }}
     name: linux-jammy-rocm-py3.10
     uses: ./.github/workflows/_linux-build.yml
     needs:
