Added type annotations for the rest

--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -273,6 +273,10 @@ class _FunctionBase:
     _materialize_non_diff_grads: _bool
     # skip adding type hints for the fields that have wrappers defined
     # in torch/autograd/function.py
+    def _sequence_nr(self) -> _int: ...
+    def _register_hook_dict(self, tensor: Tensor) -> None: ...
+    def register_hook(self, hook: Callable[..., Any]) -> Any: ...
+    def register_prehook(self, hook: Callable[..., Any]) -> Any: ...
 
 # Defined in torch/csrc/autograd/python_legacy_variable.cpp
 class _LegacyVariableBase(Tensor):  # inherits from Tensor to appease mypy
