Add needs_exact_strides tag to _scaled_mm_v2
Summary:

This was missed when the ops were originally added, causes issues
w/compilation of `torch._scaled_mm_v2{.out,}` calls

Signed-off-by: Simon Layton <simonlayton@meta.com>
ghstack-source-id: 79f19ced2bafa3fffdec117b70911b3274ede908
Pull-Request: https://github.com/pytorch/pytorch/pull/173646

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -7328,12 +7328,14 @@
   dispatch:
     CUDA: _scaled_mm_cuda_v2
     XPU: _scaled_mm_xpu_v2
+  tags: needs_exact_strides
 
 - func: _scaled_mm_v2.out(Tensor self, Tensor mat2, Tensor[] scale_a, int[] recipe_a, int[] swizzle_a, Tensor[] scale_b, int[] recipe_b, int[] swizzle_b, Tensor? bias, ScalarType? out_dtype, int[] contraction_dim=[], bool use_fast_accum=False, *, Tensor(a!) out) -> Tensor(a!)
   variants: function
   dispatch:
     CUDA: _scaled_mm_cuda_v2_out
     XPU: _scaled_mm_xpu_v2_out
+  tags: needs_exact_strides
 
 
 - func: _scaled_grouped_mm(Tensor self, Tensor mat2, Tensor scale_a, Tensor scale_b, Tensor? offs=None, Tensor? bias=None, Tensor? scale_result=None, ScalarType? out_dtype=None, bool use_fast_accum=False) -> Tensor
