Update runner configuration for ROCM MI210

--- a/.github/workflows/inductor-rocm-mi200.yml
+++ b/.github/workflows/inductor-rocm-mi200.yml
@@ -40,8 +40,8 @@ jobs:
       docker-image-name: ci-image:pytorch-linux-jammy-rocm-n-py3
       test-matrix: |
         { include: [
-          { config: "inductor", shard: 1, num_shards: 2, runner: "linux.rocm.gpu.m210.1" },
-          { config: "inductor", shard: 2, num_shards: 2, runner: "linux.rocm.gpu.m210.1" },
+          { config: "inductor", shard: 1, num_shards: 2, runner: "linux.rocm.gpu.mi210.1" },
+          { config: "inductor", shard: 2, num_shards: 2, runner: "linux.rocm.gpu.mi210.1" },
         ]}
     secrets: inherit
 
