--- a/pyrefly.toml
+++ b/pyrefly.toml
@@ -88,6 +88,7 @@ ignore-missing-imports = [
     "boto3.*",
     "dill.*",
     "usort.*",
+    "cutlass.*",
     "cutlass_library.*",
     "cutlass_api.*",
     "deeplearning.*",
